# surveillance-station-client

./: .gitignore  LICENSE  README.md  TROUBLESHOOTING.md  appimage_entry.py  build-appimage.sh  pyproject.toml  surveillance.1
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: check-debug-logs.yml  lint.yml  release.yml  stale-issues.yml
data/: org.surveillance.desktop  style.css
src/surveillance/: __init__.py  __main__.py  app.py  config.py  credentials.py
src/surveillance/api/: auth.py  client.py  models.py
src/surveillance/services/: camera.py  event.py  homemode.py  license.py  live.py  ptz.py  recording.py  snapshot.py  timelapse.py  ws_bridge.py
src/surveillance/ui/: advanced_search.py  events.py  headerbar.py  layouts.py  licenses.py  liveview.py  login.py  mpv_widget.py  notifications.py  player.py  ptz_controls.py  recording_search.py  recordings.py  sidebar.py  snapshots.py  timelapse.py  window.py
src/surveillance/util/: __init__.py  async_bridge.py
tests/: conftest.py  test_api_client.py  test_config.py  test_liveview_persistence.py  test_logging.py  test_models.py  test_services.py  test_ui_behavior.py  test_ws_bridge.py
