[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "surveillance"
version = "0.1.0"
description = "Native Linux client for Synology Surveillance Station"
readme = "README.md"
requires-python = ">=3.11"
license = "BSD-2-Clause"
dependencies = [
    "PyGObject>=3.50",
    "httpx[http2]>=0.27",
    "python-mpv>=1.0",
    "PyOpenGL>=3.1",
    "keyring>=25.0",
    "tomli-w>=1.0",
]

[project.scripts]
surveillance = "surveillance.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "respx",
    "ruff",
    "mypy",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E402"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
