[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "surveillance"
version = "0.1.1"
description = "Native desktop client for Synology Surveillance Station"
readme = "README.md"
requires-python = ">=3.11"
license = "BSD-2-Clause"
dependencies = [
    "PyGObject>=3.50",
    "httpx[http2]>=0.27",
    "python-mpv>=1.0",
    "PyOpenGL>=3.1",
    "keyring>=25.0",
    "tomli-w>=1.0",
    "websockets>=13.0",
]

[project.scripts]
surveillance = "surveillance.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "respx",
    "ruff",
    "mypy",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "S", "SIM", "RET", "PLR", "PLW", "PLC", "TRY", "RUF"]
ignore = [
    "PLW0603",  # global statement — used by design in async_bridge
    "PLR0915",  # too many statements — GTK __init__ methods are inherently long
    "PLR0913",  # too many arguments — API methods need many params
    "S324",     # SHA1/MD5 — required for Synology API compatibility
    "S311",     # random — used for non-security purposes
    "TRY003",   # long exception messages — pragmatic choice
    "PLR2004",  # magic values — config constants are clear in context
]

[tool.ruff.lint.per-file-ignores]
"src/surveillance/services/live.py" = ["PLR0911"]
"src/surveillance/ui/*.py" = ["E402", "PLC0415"]
"src/surveillance/app.py" = ["E402", "PLC0415"]
"src/surveillance/__main__.py" = ["PLC0415"]
"src/surveillance/config.py" = ["PLC0415"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
